libfpgalink.h

	
	typedef enum {
		FL_SUCCESS = 0,          
		FL_ALLOC_ERR,            
		FL_USB_ERR,              
		FL_PROTOCOL_ERR,         
		FL_SYNC_ERR,             
		FL_FX2_ERR,              
		FL_JTAG_ERR,             
		FL_FILE_ERR,             
		FL_WBUF_ERR,             
		FL_BUF_INIT_ERR,         
		FL_BUF_APPEND_ERR,       
		FL_BUF_LOAD_ERR,         
		FL_UNSUPPORTED_CMD_ERR,  
		FL_UNSUPPORTED_DATA_ERR, 
		FL_UNSUPPORTED_SIZE_ERR, 
		FL_INTERNAL_ERR          
	} FLStatus;
	struct FLContext;  
	DLLEXPORT(void) flInitialise(void);
	DLLEXPORT(void) flFreeError(const char *err);
	DLLEXPORT(FLStatus) flOpen(
		const char *vp, struct FLContext **handle, const char **error
	) WARN_UNUSED_RESULT;
	DLLEXPORT(void) flClose(
		struct FLContext *handle
	);
	DLLEXPORT(FLStatus) flIsDeviceAvailable(
		const char *vp, bool *isAvailable, const char **error
	) WARN_UNUSED_RESULT;
	DLLEXPORT(bool) flIsNeroCapable(struct FLContext *handle);
	DLLEXPORT(bool) flIsCommCapable(struct FLContext *handle);
	DLLEXPORT(FLStatus) flIsFPGARunning(
		struct FLContext *handle, bool *isRunning, const char **error
	) WARN_UNUSED_RESULT;
	DLLEXPORT(FLStatus) flReadRegister(
		struct FLContext *handle, uint32 timeout, uint8 reg, uint32 count, uint8 *buf,
		const char **error
	) WARN_UNUSED_RESULT;
	DLLEXPORT(FLStatus) flWriteRegister(
		struct FLContext *handle, uint32 timeout, uint8 reg, uint32 count, const uint8 *data,
		const char **error
	) WARN_UNUSED_RESULT;
	DLLEXPORT(FLStatus) flAppendWriteRegisterCommand(
		struct FLContext *handle, uint8 reg, uint32 count, const uint8 *data, const char **error
	) WARN_UNUSED_RESULT;
	DLLEXPORT(void) flCleanWriteBuffer(
		struct FLContext *handle
	);
	DLLEXPORT(FLStatus) flPlayXSVF(
		struct FLContext *handle, const char *xsvfFile, const char **error
	) WARN_UNUSED_RESULT;
	DLLEXPORT(FLStatus) flScanChain(
		struct FLContext *handle, uint32 *numDevices, uint32 *deviceArray, uint32 arraySize,
		const char **error
	) WARN_UNUSED_RESULT;
	DLLEXPORT(FLStatus) flLoadStandardFirmware(
		const char *curVidPid, const char *newVidPid, const char **error
	) WARN_UNUSED_RESULT;
	DLLEXPORT(FLStatus) flFlashStandardFirmware(
		struct FLContext *handle, const char *newVidPid, uint32 eepromSize,
		const char *xsvfFile, const char **error
	) WARN_UNUSED_RESULT;
	DLLEXPORT(FLStatus) flFlashCustomFirmware(
		struct FLContext *handle, const char *fwFile, uint32 eepromSize, const char **error
	) WARN_UNUSED_RESULT;
	DLLEXPORT(FLStatus) flSaveFirmware(
		struct FLContext *handle, uint32 eepromSize, const char *saveFile, const char **error
	) WARN_UNUSED_RESULT;
	DLLEXPORT(void) flSleep(
		uint32 ms
	);
	DLLEXPORT(uint8*) flLoadFile(
		const char *name, uint32 *length
	);
	DLLEXPORT(void) flFreeFile(
		uint8 *buffer
	);
	DLLEXPORT(FLStatus) flPortAccess(
		struct FLContext *handle, uint16 portWrite, uint16 ddr, uint16 *portRead, const char **error
	) WARN_UNUSED_RESULT;